# dl-for-cta

./: .gitattributes  .gitignore  README.md  pyproject.toml  sitecustomize.py
agent_context/: AGENTS.md  memory.md
configs/: common.toml  cpd_dmn_minute.toml
dl_for_cta/: __init__.py
docs/: paper_essence.md  reproduction_guide.md
src/dl_for_cta/: __init__.py  cli.py
src/dl_for_cta/backtest/: __init__.py  engine.py  metrics.py
src/dl_for_cta/config/: __init__.py  loader.py  schema.py
src/dl_for_cta/data/: __init__.py  minute_loader.py
src/dl_for_cta/experiments/: run_backtest.py  run_cpd.py  run_features.py  run_pipeline.py  run_train.py  search.py  splits.py
src/dl_for_cta/features/: __init__.py  basic.py  build_features.py  cpd_gp.py
src/dl_for_cta/models/: __init__.py  dataset.py  dmn_lstm.py  losses.py  threshold.py
src/dl_for_cta/utils/: logging.py
tests/: test.ipynb  test_backtest_engine.py  test_build_features.py  test_config_loader.py  test_cpd_gp.py  test_minute_loader.py  test_no_lookahead.py  test_search.py  test_splits.py  test_threshold.py
tests/fixtures/config_loader/: common.toml  experiment.toml  list_override.toml  single_file.toml
